--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "llm  =  GooglePalm(google_api_key='AIzaSyCcHxCh5cvFOJr47jNofriPSjSebah7tY0',temperature=0.2)\n",
+    "llm  =  GooglePalm(google_api_key='your api ',temperature=0.2)\n",
     "result = llm('write about AI')\n",
     "print(result)"
    ]
@@ -66,7 +66,7 @@
    "source": [
     "from langchain.embeddings import GooglePalmEmbeddings\n",
     "\n",
-    "embedding = GooglePalmEmbeddings(google_api_key='AIzaSyCcHxCh5cvFOJr47jNofriPSjSebah7tY0')\n",
+    "embedding = GooglePalmEmbeddings(google_api_key='your api')\n",
     "res = embedding.embed_query('how are you doing')\n",
     "print(len(res))"
    ]
